[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/panel/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/options_menu/options_menu.gd" type="Script" id=3]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0.92549, 0.654902, 0.172549, 1 )
font_data = ExtResource( 2 )

[node name="options_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="center_container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" parent="center_container" instance=ExtResource( 1 )]
margin_left = 140.0
margin_top = 160.0
margin_right = 1140.0
margin_bottom = 560.0
rect_min_size = Vector2( 1000, 400 )

[node name="margin_container" type="MarginContainer" parent="center_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 980.0
margin_bottom = 380.0
custom_constants/separation = 15

[node name="title" type="Label" parent="center_container/panel/margin_container/vbox_container"]
margin_right = 960.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "OPCIONES"
align = 1
valign = 1

[node name="sfx_volume_container" type="VBoxContainer" parent="center_container/panel/margin_container/vbox_container"]
margin_top = 191.0
margin_right = 960.0
margin_bottom = 295.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="label" type="Label" parent="center_container/panel/margin_container/vbox_container/sfx_volume_container"]
margin_right = 960.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.92549, 0.654902, 0.172549, 1 )
custom_fonts/font = SubResource( 2 )
text = "Volumen SFX"

[node name="hbox_container" type="HBoxContainer" parent="center_container/panel/margin_container/vbox_container/sfx_volume_container"]
margin_top = 54.0
margin_right = 960.0
margin_bottom = 104.0
custom_constants/separation = 20

[node name="slider" type="HSlider" parent="center_container/panel/margin_container/vbox_container/sfx_volume_container/hbox_container"]
margin_right = 801.0
margin_bottom = 50.0
rect_min_size = Vector2( 550, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sample_sound_sfx" parent="center_container/panel/margin_container/vbox_container/sfx_volume_container/hbox_container" instance=ExtResource( 4 )]
margin_left = 821.0
margin_top = 0.0
margin_right = 960.0
margin_bottom = 50.0
text = "Reproducir"

[node name="main_menu_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 4 )]
margin_top = 310.0
margin_right = 960.0
margin_bottom = 360.0
text = "Men√∫ principal"

[connection signal="value_changed" from="center_container/panel/margin_container/vbox_container/sfx_volume_container/hbox_container/slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/main_menu_button" to="." method="_on_main_menu_button_pressed"]
